--- a/com.kms.example.rcp.ui.contribute/build.properties
+++ b/com.kms.example.rcp.ui.contribute/build.properties
@@ -1,6 +1,7 @@
 output.. = bin/
 bin.includes = META-INF/,\
                .,\
-               Application.e4xmi,\
+               fragment.e4xmi,\
                plugin.xml
-source.. = src/
+source.. = src/,\
+           icons/
